[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/GameOverScript.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Retro-Gaming/Retro Gaming.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[node name="GameOver" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 495.633, 792.106, 808.0 ]
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Control"]
visible = false
margin_left = 495.633
margin_top = 489.737
margin_right = 807.633
margin_bottom = 557.737
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.713726, 0.662745, 0.6, 1 )
action_mode = 0
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="PlayButton" type="Button" parent="Control"]
margin_left = 495.633
margin_top = 414.32
margin_right = 807.633
margin_bottom = 482.32
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.713726, 0.662745, 0.6, 1 )
action_mode = 0
text = "Continue"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Control/QuitButton" to="." method="_on_QuitButton_mouse_entered"]
[connection signal="mouse_exited" from="Control/QuitButton" to="." method="_on_QuitButton_mouse_exited"]
[connection signal="pressed" from="Control/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="mouse_entered" from="Control/PlayButton" to="." method="_on_PlayButton_mouse_entered"]
[connection signal="mouse_exited" from="Control/PlayButton" to="." method="_on_PlayButton_mouse_exited"]
[connection signal="pressed" from="Control/PlayButton" to="." method="_on_PlayButton_pressed"]
